# ily-rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: deploy.yml
html/: index.html
html/static/scripts/: chat.js
html/static/styles/: dark.css  style.css
migrations/: 20250822033211_init.sql  20250828112429_decimal-to-timestamp.sql  20250828115526_not-null-timestamp.sql  20250902215616_message_type.sql  20250908120129_channels.sql
src/: main.rs
