[package]
name = "ily-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.4"
bcrypt = "0.17.1"
dotenv = "0.15.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
socketioxide = { version = "0.17.2", features = ["extensions", "state"] }
tokio = { version = "1.47.1", features = ["rt", "rt-multi-thread", "macros"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["fs", "cors"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

[dependencies.sqlx]
version = "0.8.6"
default-features = false
features = ["macros", "postgres", "runtime-tokio"]
